--- a/store/blocks/slider-layout.jsonc
+++ b/store/blocks/slider-layout.jsonc
@@ -1,12 +1,12 @@
 {
   "slider-layout#home": {
     "children": [
-      "image#1",
-      "image#2",
-      "image#3",
-      "image#4",
-      "image#5",
-      "image#6"
+      "image#brand1",
+      "image#brand2",
+      "image#brand3",
+      "image#brand4",
+      "image#brand5",
+      "image#brand6"
     ],
     "props": {
       "autoplay": {
@@ -15,37 +15,37 @@
       }
     }
   },
-  "image#1": {
+  "image#brand1": {
     "props": {
       "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square1.png",
       "maxWidth": "100%"
     }
   },
-  "image#2": {
+  "image#brand2": {
     "props": {
       "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square2.png",
       "maxWidth": "100%"
     }
   },
-  "image#3": {
+  "image#brand3": {
     "props": {
       "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square3.png",
       "maxWidth": "100%"
     }
   },
-  "image#4": {
+  "image#brand4": {
     "props": {
       "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square4.png",
       "maxWidth": "100%"
     }
   },
-  "image#5": {
+  "image#brand5": {
     "props": {
       "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square5.png",
       "maxWidth": "100%"
     }
   },
-  "image#6": {
+  "image#brand6": {
     "props": {
       "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square6.png",
       "maxWidth": "100%"
