--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -1,6 +1,6 @@
 {
   "store.product": {
-    "children": ["flex-layout.row#main"]
+    "children": ["breadcrumb", "flex-layout.row#main"]
   },
   "flex-layout.row#main": {
     "props": {
@@ -12,7 +12,14 @@
     "children": ["product-images"]
   },
   "flex-layout.col#right": {
-    "children": ["product-price", "product-name", "buy-button"],
+    "children": [
+      "product-name",
+      "product-identifier.product",
+      "product-price",
+      "flex-layout.row#qty-sku",
+      "shipping-simulator",
+      "buy-button"
+    ],
     "props": {
       "verticalAlign": "middle",
       "preventVerticalStretch": true
@@ -23,5 +30,8 @@
       "showSavings": true,
       "showListPrice": true
     }
+  },
+  "flex-layout.row#qty-sku": {
+    "children": ["sku-selector", "product-quantity"]
   }
 }
