--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -1,6 +1,6 @@
 {
   "store.product": {
-    "children": ["breadcrumb", "flex-layout.row#main"]
+    "children": ["breadcrumb", "flex-layout.row#main", "shelf.relatedProducts"]
   },
   "flex-layout.row#main": {
     "props": {
@@ -9,7 +9,7 @@
     "children": ["flex-layout.col#left", "flex-layout.col#right"]
   },
   "flex-layout.col#left": {
-    "children": ["product-images"]
+    "children": ["stack-layout#brand"]
   },
   "flex-layout.col#right": {
     "children": [
@@ -33,5 +33,21 @@
   },
   "flex-layout.row#qty-sku": {
     "children": ["sku-selector", "product-quantity"]
+  },
+  "stack-layout#brand": {
+    "children": ["product-images", "product-brand"]
+  },
+  "product-brand": {
+    "props": {
+      "displayMode": "logo",
+      "height": 30
+    }
+  },
+  "sku-selector": {
+    "props": {
+      "hideImpossibleCombinations": false,
+      "initialSelection": "empty",
+      "showVariationsErrorMessage": true
+    }
   }
 }
