feat(home): issue #13

--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -45,7 +45,7 @@
   },
   "sku-selector": {
     "props": {
-      "hideImpossibleCombinations": false,
+      "showVariationsLabels": true,
       "initialSelection": "empty",
       "showVariationsErrorMessage": true
     }
