feat(home): issue #14

--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -21,7 +21,8 @@
       "search-fetch-more"
     ],
     "props": {
-      "pagination": "show-more"
+      "pagination": "show-more",
+      "preventRouteChange": false
     }
   }
 }
